# ingester

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
examples/: hacker_news.rs
src/: client.rs  endpoint.rs  error.rs  ingester.rs  lib.rs  rate_limit.rs  request.rs  response.rs
tests/: pipeline.rs
