[package]
name = "ingester"
version = "0.0.1"
description = "Turn paginated APIs into rate-limited async streams of parsed items"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["scraping", "ingestion"]
categories = ["web-programming::http-client", "asynchronous"]
edition = "2024"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["reqwest"]
reqwest = ["dep:reqwest"]
governor = ["dep:governor"]

[dependencies]
bytes = "1"
futures-util = "0.3"
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2.5"
reqwest = { version = "0.13", optional = true, default-features = false, features = ["rustls"] }
governor = { version = "0.10", optional = true, default-features = false, features = ["std"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }

[[example]]
name = "hacker_news"
required-features = ["governor"]
